--- a/views/search.pug
+++ b/views/search.pug
@@ -8,4 +8,4 @@ block content
         td=item.roadname
         td=item.address
         td
-          a(href='/post?title=speedBumps&id=' + item.ID)=item.name 
+          a(href='/post?title='+table+'&id=' + item.ID)=item.name 
