--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,7 @@ html
   body
     a(href = '/') Home
     a(href='/speedbump') 과속방지턱
+    a(href='/speedcamera') 무인카메라
     form(action='/search' method='GET')
       select#cars(name='list')
         option(value='bicycleRental') 자전거대여소
