Seungyong part finished

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,10 @@ html
     a(href = '/') Home
     a(href='/speedbump') 과속방지턱
     a(href='/speedcamera') 무인카메라
+    a(href='/rentalcar') 렌트카
+    a(href='/carservice') 자동차정비소
+    a(href='/schoolzone') 스쿨존
+   
     form(action='/search' method='GET')
       select#cars(name='list')
         option(value='bicycleRental') 자전거대여소
