--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,11 @@ html
   body
     a(href = '/') Home
     a(href='/speedbump') 과속방지턱
+    a(href='/carwash') 세차장
+    a(href='/overpass') 육교
+    a(href='/parkinglot') 주차장
+    a(href='/publicparkinglot') 공용주차장
+    a(href='/trafficlight') 신호등 
     form(action='/search' method='GET')
       select#cars(name='list')
         option(value='bicycleRental') 자전거대여소
