--- a/views/publicparkinglot.pug
+++ b/views/publicparkinglot.pug
@@ -12,4 +12,4 @@ block content
         td=item.paymentMethod
         td=item.name
         td
-          a(href='/post?title=carWash&id=' + item.ID)=item.name 
+          a(href='/post?title=publicParkingLot&id=' + item.ID)=item.name 
