--- a/views/trafficlight.pug
+++ b/views/trafficlight.pug
@@ -8,4 +8,4 @@ block content
         td=item.address
         td=item.name
         td
-          a(href='/post?title=carWash&id=' + item.ID)=item.name 
+          a(href='/post?title=trafficLight&id=' + item.ID)=item.name 
