--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,8 +7,11 @@ html
     a(href = '/') Home
     a(href='/speedbump') 과속방지턱
     a(href='/speedcamera') 무인카메라
+    a(href='/drivethrurestaurant') 드라이브스루
+    a(href='/electronicvehiclechargingstation') 전기차충전소
+    a(href='/transportationsupportcenter') 교통지원소
     form(action='/search' method='GET')
-      select#cars(name='list')
+      select#cars(name='list') 교통지원소
         option(value='bicycleRental') 자전거대여소
         option(value='carService') 차정비소
         option(value='carWash') 세차장
