--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,4 +1,4 @@
-doctype html
+doctype htmlㅋㅋ
 html
   head
     title= title
@@ -10,6 +10,7 @@ html
     a(href='/drivethrurestaurant') 드라이브스루
     a(href='/electronicvehiclechargingstation') 전기차충전소
     a(href='/transportationsupportcenter') 교통지원소
+    a(href='/bicyclerental') 자전거대여소
     form(action='/search' method='GET')
       select#cars(name='list') 교통지원소
         option(value='bicycleRental') 자전거대여소
