--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,8 @@ html
     a(href='/overpass') 육교
     a(href='/parkinglot') 주차장
     a(href='/publicparkinglot') 공용주차장
-    a(href='/trafficlight') 신호등 
+    a(href='/trafficlight') 신호등
+    a(href='/pharmacy') 약국 
     form(action='/search' method='GET')
       select#cars(name='list')
         option(value='bicycleRental') 자전거대여소
