--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,7 +15,10 @@ html
     a(href='/parkinglot') 주차장
     a(href='/publicparkinglot') 공용주차장
     a(href='/trafficlight') 신호등
-    a(href='/pharmacy') 약국 
+    a(href='/pharmacy') 약국
+    a(href='/publictoilet') 공중화장실
+    a(href='/towedcarstorage') 견인차저장소
+    a(href='/wheelchaircharger') 휠체어충전소 
     form(action='/search' method='GET')
       select#cars(name='list')
         option(value='bicycleRental') 자전거대여소
