--- a/views/parkinglot.pug
+++ b/views/parkinglot.pug
@@ -12,4 +12,4 @@ block content
         td=item.fee
         td=item.paymentMethod
         td
-          a(href='/post?title=carWash&id=' + item.ID)=item.name 
+          a(href='/post?title=parkingLot&id=' + item.ID)=item.name 
