--- a/views/wheelchaircharger.pug
+++ b/views/wheelchaircharger.pug
@@ -12,4 +12,4 @@ block content
         td=item.endtime
         td=item.location
         td
-          a(href='/post?title=towedCarStorage&id=' + item.ID)=item.name
+          a(href='/post?title=wheelchairCharger&id=' + item.ID)=item.name
