--- a/views/post.pug
+++ b/views/post.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+ 
   table
    for item in posts
      for list in item 
@@ -19,4 +20,14 @@ block content
     input(type='hidden' name='id', value=id)
     textarea(rows='4' cols='50' name='content' required maxlength='300')
     input(type='submit' value='Submit')
- 
+  .mapouter
+    .gmap_canvas
+      for a in posts
+        iframe#gmap_canvas(width='1000' height='500' src='https://map.kakao.com/?q='+a.address frameborder='0' scrolling='no' marginheight='0' marginwidth='0')
+    style.
+     .mapouter{position:relative;text-align:right;height:500px;width:1000px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1000px;}
+
+                                                                                                                                         
+     
+
+
