--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,48 +2,53 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+
+    #Basic_layout
+    
+    link(href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/cosmo/bootstrap.min.css", rel="stylesheet", integrity="sha384-qdQEsAI45WFCO5QwXBelBe1rR9Nwiss4rGEqiszC+9olH1ScrLrMQr1KmDR964uZ", crossorigin="anonymous")
+
   body
-    a(href = '/') Home
-    a(href='/speedbump') 과속방지턱&nbsp;
-    a(href='/speedcamera') 무인과속카메라&nbsp;
-    a(href='/rentalcar') 렌트카&nbsp;
-    a(href='/carservice') 자동차정비소&nbsp;
-    a(href='/schoolzone') 어린이보호구역
-    a(href='/carwash') 세차장
-    a(href='/overpass') 육교
-    a(href='/parkinglot') 주차장
-    a(href='/publicparkinglot') 공영주차장
-    a(href='/trafficlight') 신호등 
-    a(href='/drivethrurestaurant') 드라이브스루
-    a(href='/electronicvehiclechargingstation') 전기차충전소
-    a(href='/transportationsupportcenter') 교통지원소
-    a(href='/pharmacy') 약국
-    a(href='/publictoilet') 공중화장실
-    a(href='/towedcarstorage') 견인차저장소
-    a(href='/wheelchaircharger') 전기휠체어충전소
-    a(href='/bicyclerental') 자전거대여소
-    form(action='/search' method='GET')
-      select#cars(name='list') 
-        option(value='bicycleRental') 자전거대여소
-        option(value='carService') 차정비소
-        option(value='carWash') 세차장
-        option(value='driveThruRestaurant') 드라이브스루
-        option(value='electronicVehicleChargingStation') 전기차충전소
-        option(value='overpass') 육교
-        option(value='parkingLot') 주차장
-        option(value='pharmacy') 약국
-        option(value='publicParkingLot') 공영주차장
-        option(value='publicToilet') 공중화장실
-        option(value='rentalCar') 렌트카
-        option(value='schoolZone') 어린이보호구역
-        option(value='speedBumps') 과속방지턱
-        option(value='speedCamera') 무인과속카메라
-        option(value='towedCarStorage') 견인차저장소
-        option(value='trafficLight') 신호등
-        option(value='transportationSupportCenter') 교통지원소
-        option(value='wheelchairCharger') 전기휠체어충전소
-        input(type='text' placeholder='동 또는 도로명' name='search')
-        input(type='submit' value='Search')
- 
+    header
+      a(href = '/') Home
+      a(href='/speedbump') 과속방지턱&nbsp;
+      a(href='/speedcamera') 무인과속카메라&nbsp;
+      a(href='/rentalcar') 렌트카&nbsp;
+      a(href='/carservice') 자동차정비소&nbsp;
+      a(href='/schoolzone') 어린이보호구역
+      a(href='/carwash') 세차장
+      a(href='/overpass') 육교
+      a(href='/parkinglot') 주차장
+      a(href='/publicparkinglot') 공영주차장
+      a(href='/trafficlight') 신호등 
+      a(href='/drivethrurestaurant') 드라이브스루
+      a(href='/electronicvehiclechargingstation') 전기차충전소
+      a(href='/transportationsupportcenter') 교통지원소
+      a(href='/pharmacy') 약국
+      a(href='/publictoilet') 공중화장실
+      a(href='/towedcarstorage') 견인차저장소
+      a(href='/wheelchaircharger') 전기휠체어충전소
+      a(href='/bicyclerental') 자전거대여소
+      form(action='/search' method='GET')
+        select#cars(name='list') 
+          option(value='bicycleRental') 자전거대여소
+          option(value='carService') 차정비소
+          option(value='carWash') 세차장
+          option(value='driveThruRestaurant') 드라이브스루
+          option(value='electronicVehicleChargingStation') 전기차충전소
+          option(value='overpass') 육교
+          option(value='parkingLot') 주차장
+          option(value='pharmacy') 약국
+          option(value='publicParkingLot') 공영주차장
+          option(value='publicToilet') 공중화장실
+          option(value='rentalCar') 렌트카
+          option(value='schoolZone') 어린이보호구역
+          option(value='speedBumps') 과속방지턱
+          option(value='speedCamera') 무인과속카메라
+          option(value='towedCarStorage') 견인차저장소
+          option(value='trafficLight') 신호등
+          option(value='transportationSupportCenter') 교통지원소
+          option(value='wheelchairCharger') 전기휠체어충전소
+          input(type='text' placeholder='동 또는 도로명' name='search')
+          input(type='submit' value='Search')
+  .container 
     block content
