--- a/views/post.pug
+++ b/views/post.pug
@@ -3,10 +3,10 @@ extends layout
 block content
 
   h1.display-3
-    storng TITLE
+    strong TITLE
 
   .row
-    .card.border-primary.mb-3(style='max-width: 20rem;')
+    .card.border-primary.mb-3(style='max-width: 50rem;')
       .card-header Information
       .card-body
         table
