--- a/views/rentalcar.pug
+++ b/views/rentalcar.pug
@@ -2,12 +2,25 @@ extends layout
 
 block content
   h2 This is RentalCar :)
-  table
-    for item in results
-      tr
-        td=item.address
-        td=item.startTime
-        td=item.endTime
-        td=phoneNumber
-        td
-          a(href='/post?title=rentalCar&id=' + item.ID)=item.name 
+  .jumbotron
+    h1.display-4
+    table
+      for item in results
+        tr
+          td=item.address
+          td=item.startTime
+          td=item.endTime
+          td=phoneNumber
+          td
+            a(href='/post?title=rentalCar&id=' + item.ID)=item.name
+
+  style.
+    table {
+    width: 100%;
+    border-top: 1px solid #444444;
+    border-collapse: collapse;
+    }
+    td {
+    border-bottom: 1px solid #444444;
+    padding: 10px;
+    } 
