--- a/views/speedcamera.pug
+++ b/views/speedcamera.pug
@@ -2,12 +2,25 @@ extends layout
 
 block content
   h2 This is SpeedCamera :)
-  table
-    for item in results
-      tr
-        td=item.roadnumber
-        td=item.roadname
-        td=item.address
-        td=item.placeinstalled
-        td
-          a(href='/post?title=speedCamera&id=' + item.ID)=item.name
+  .jumbtoron
+    h1.display-4
+    table
+      for item in results
+        tr
+          td=item.roadnumber
+          td=item.roadname
+          td=item.address
+          td=item.placeinstalled
+          td
+            a(href='/post?title=speedCamera&id=' + item.ID)=item.name
+
+  style.
+    table {
+    width: 100%;
+    border-top: 1px solid #444444;
+    border-collapse: collapse;
+    }
+    td {
+    border-bottom: 1px solid #444444;
+    padding: 10px;
+    }
