--- a/views/bicyclerental.pug
+++ b/views/bicyclerental.pug
@@ -2,11 +2,26 @@ extends layout
 
 block content
   h2 This is Wheelchair Charger :)
-  table
-    for item in results
-      tr
-        td=item.address
-        td=item.starttime
-        td=item.endtime
-        td
-          a(href='/post?title=bicycleRental&id=' + item.ID)=item.name
+
+  .jumbotron
+    h1.display-4  
+    table
+      for item in results
+        tr
+          td=item.address
+          td=item.starttime
+          td=item.endtime
+          td
+            a(href='/post?title=bicycleRental&id=' + item.ID)=item.name
+
+  style.
+    table {
+    width: 100%;
+    border-top: 1px solid #444444;
+    border-collapse: collapse;
+    }
+    td {
+    border-bottom: 1px solid #444444;
+    padding: 10px;
+    }
+  
