--- a/views/pharmacy.pug
+++ b/views/pharmacy.pug
@@ -2,11 +2,24 @@ extends layout
 
 block content
   h2 This is Pharmacy :)
-  table
-    for item in results
-      tr
-        td=item.name
-        td=item.address
-        td=item.phonenumber
-        td
-          a(href='/post?title=pharmacy&id=' + item.ID)=item.name 
+  .jumbotron
+    h1.display-4
+    table
+      for item in results
+        tr
+          td=item.name
+          td=item.address
+          td=item.phonenumber
+          td
+            a(href='/post?title=pharmacy&id=' + item.ID)=item.name 
+
+  style.
+    table {
+    width: 100%;
+    border-top: 1px solid #444444;
+    border-collapse: collapse;
+    }
+    td {
+    border-bottom: 1px solid #444444;
+    padding: 10px;
+    }
