--- a/views/publicparkinglot.pug
+++ b/views/publicparkinglot.pug
@@ -2,14 +2,27 @@ extends layout
 
 block content
   h2 This is publicparkinglot :)
-  table
-    for item in results
-      tr
-        td=item.address
-        td=item.type
-        td=item.operatingDays
-        td=item.fee
-        td=item.paymentMethod
-        td=item.name
-        td
-          a(href='/post?title=publicParkingLot&id=' + item.ID)=item.name 
+  .jumbotron
+    h1.display-4
+    table
+      for item in results
+        tr
+          td=item.address
+          td=item.type
+          td=item.operatingDays
+          td=item.fee
+          td=item.paymentMethod
+          td=item.name
+          td
+            a(href='/post?title=publicParkingLot&id=' + item.ID)=item.name
+
+  style.
+    table {
+    width: 100%;
+    border-top: 1px solid #444444;
+    border-collapse: collapse;
+    }
+    td {
+    border-bottom: 1px solid #444444;
+    padding: 10px;
+    } 
