--- a/views/publictoilet.pug
+++ b/views/publictoilet.pug
@@ -2,12 +2,25 @@ extends layout
 
 block content
   h2 This is Public Toilet :)
-  table
-    for item in results
-      tr
-        td=item.name
-        td=item.address
-        td=item.phonenumber
-        td=item.unisex
-        td
-          a(href='/post?title=publicToilet&id=' + item.ID)=item.name
+  .jumbotron
+    h1.display-4
+    table
+      for item in results
+        tr
+          td=item.name
+          td=item.address
+          td=item.phonenumber
+          td=item.unisex
+          td
+            a(href='/post?title=publicToilet&id=' + item.ID)=item.name
+
+  style.
+    table {
+    width: 100%;
+    border-top: 1px solid #444444;
+    border-collapse: collapse;
+    }
+    td {
+    border-bottom: 1px solid #444444;
+    padding: 10px;
+    }
