--- a/views/trafficlight.pug
+++ b/views/trafficlight.pug
@@ -2,10 +2,23 @@ extends layout
 
 block content
   h2 This is TrafficLight :)
-  table
-    for item in results
-      tr
-        td=item.address
-        td=item.name
-        td
-          a(href='/post?title=trafficLight&id=' + item.ID)=item.name 
+  .jumbotron
+  h1.display-4
+    table
+      for item in results
+        tr
+          td=item.address
+          td=item.name
+          td
+            a(href='/post?title=trafficLight&id=' + item.ID)=item.name
+
+  style.
+    table {
+    width: 100%;
+    border-top: 1px solid #444444;
+    border-collapse: collapse;
+    }
+    td {
+    border-bottom: 1px solid #444444;
+    padding: 10px;
+    } 
