--- a/views/bicyclerental.pug
+++ b/views/bicyclerental.pug
@@ -2,11 +2,16 @@ extends layout
 
 block content
   h2 This is BycycleRental Charger :)
-
-  .jumbotron
-    h1.display-4  
-    table
-      for item in results
+  
+  table
+    thead
+      tr
+        th address
+        th starttime
+        th endtime
+        th name
+    tbody
+      for item in results  
         tr
           td=item.address
           td=item.starttime
@@ -20,8 +25,18 @@ block content
     border-top: 1px solid #444444;
     border-collapse: collapse;
     }
-    td {
-    border-bottom: 1px solid #444444;
+    th, td {
     padding: 10px;
+    text-align: center;
     }
-  
+    thead tr {
+    background-color: gray;
+    color: #ffffff;
+    }
+    tbody tr:nth-child(2n) {
+    background-color: #d3d3d3;
+    }
+    tbody tr:nth-child(2n+1) {
+    background-color: white;
+    }
+
