--- a/views/overpass.pug
+++ b/views/overpass.pug
@@ -2,15 +2,14 @@ extends layout
 
 block content
   h2 This is overpass :)
-  .jumbotron
-    h1.display-4
-    table
+  table
+    thead
+      th address
+      th name
+    tbody
       for item in results
         tr
           td=item.address
-          td=item.roadtype
-          td=item.roadname
-          td=item.name
           td
             a(href='/post?title=overpass&id=' + item.ID)=item.name
 
@@ -20,7 +19,18 @@ block content
     border-top: 1px solid #444444;
     border-collapse: collapse;
     }
-    td {
-    border-bottom: 1px solid #444444;
+    th, td {
     padding: 10px;
-    } 
+    text-align: center;
+    }
+    thead tr {
+    background-color: gray;
+    color: #ffffff;
+    }
+    tbody tr:nth-child(2n) {
+    background-color: #d3d3d3;
+    }
+    tbody tr:nth-child(2n+1) {
+    background-color: white;
+    }
+ 
