--- a/views/carservice.pug
+++ b/views/carservice.pug
@@ -2,9 +2,13 @@ extends layout
 
 block content
   h2 This is CarService :)
-  .jumbotron
-   h1.display-4 
-   table
+  table
+    thead
+      tr
+        th address
+        th phoneNumber
+        th name
+    tbody
       for item in results
         tr
           td=item.address
@@ -19,6 +23,16 @@ block content
     border-collapse: collapse;
     }
     th, td {
-    border-bottom: 1px solid #444444;
     padding: 10px;
-    } 
+    text-align: center;
+    }
+    thead tr {
+    background-color: gray;
+    color: #ffffff;
+    }
+    tbody tr:nth-child(2n) {
+    background-color: #d3d3d3;
+    }
+    tbody tr:nth-child(2n+1) {
+    background-color: white;
+    }
