--- a/views/speedbump.pug
+++ b/views/speedbump.pug
@@ -2,9 +2,12 @@ extends layout
 
 block content
   h2 This is SpeedBump :)
-  .jumbotron
-    h1.display-4 
-    table
+  table
+    thead
+      th roadname
+      th address
+      th name
+    tbody 
       for item in results
         tr
           td=item.roadname
@@ -18,7 +21,18 @@ block content
     border-top: 1px solid #444444;
     border-collapse: collapse;
     }
-    td {
-    border-bottom: 1px solid #444444;
+    th, td {
     padding: 10px;
-    } 
+    text-align: center;
+    }
+    thead tr {
+    background-color: gray;
+    color: #ffffff;
+    }
+    tbody tr:nth-child(2n) {
+    background-color: #d3d3d3;
+    }
+    tbody tr:nth-child(2n+1) {
+    background-color: white;
+    }
+ 
