--- a/views/speedcamera.pug
+++ b/views/speedcamera.pug
@@ -2,15 +2,18 @@ extends layout
 
 block content
   h2 This is SpeedCamera :)
-  .jumbtoron
-    h1.display-4
-    table
+  table
+    thead 
+      th roadnumber
+      th roadname
+      th address
+      th name  
+    tbody
       for item in results
         tr
           td=item.roadnumber
           td=item.roadname
           td=item.address
-          td=item.placeinstalled
           td
             a(href='/post?title=speedCamera&id=' + item.ID)=item.name
 
@@ -20,7 +23,18 @@ block content
     border-top: 1px solid #444444;
     border-collapse: collapse;
     }
-    td {
-    border-bottom: 1px solid #444444;
+    th, td {
     padding: 10px;
+    text-align: center;
     }
+    thead tr {
+    background-color: gray;
+    color: #ffffff;
+    }
+    tbody tr:nth-child(2n) {
+    background-color: #d3d3d3;
+    }
+    tbody tr:nth-child(2n+1) {
+    background-color: white;
+    }
+
