--- a/views/wheelchaircharger.pug
+++ b/views/wheelchaircharger.pug
@@ -2,12 +2,17 @@ extends layout
 
 block content
   h2 This is Wheelchair Charger :)
-  .jumbotron
-    h1.display-4
-    table
+  table
+    thead
+      th address
+      th phoneNumber
+      th starttime
+      th endtime
+      th location
+      th name
+    tbody 
       for item in results
         tr
-          td=item.name
           td=item.address
           td=item.phonenumber
           td=item.starttime
@@ -22,7 +27,18 @@ block content
     border-top: 1px solid #444444;
     border-collapse: collapse;
     }
-    td {
-    border-bottom: 1px solid #444444;
+    th, td {
     padding: 10px;
+    text-align: center;
     }
+    thead tr {
+    background-color: gray;
+    color: #ffffff;
+    }
+    tbody tr:nth-child(2n) {
+    background-color: #d3d3d3;
+    }
+    tbody tr:nth-child(2n+1) {
+    background-color: white;
+    }
+
