--- a/views/search.pug
+++ b/views/search.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h2 This is SpeedBump :)
+  h2 This is discovered table :) 
   table
     for item in results
       tr
