--- a/views/electronicvehiclechargingstation.pug
+++ b/views/electronicvehiclechargingstation.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h2 This is ElectronicVehicleChargingStation :)
+  p Electronic Vehicle Charging Station
   table
     thead
       th name
