--- a/views/drivethrurestaurant.pug
+++ b/views/drivethrurestaurant.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h2 This is DriveThruRestaurant :)
+  p DriveThru Restaurant
   table
     thead
       th address
