--- a/views/transportationsupportcenter.pug
+++ b/views/transportationsupportcenter.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h2 This is TransportationSupportCenter :)
+  p Transportation Support Center
   table
     thead
       th address
