edit tables and results

--- a/views/bicyclerental.pug
+++ b/views/bicyclerental.pug
@@ -14,8 +14,8 @@ block content
       for item in results  
         tr
           td=item.address
-          td=item.starttime
-          td=item.endtime
+          td=item.startTime
+          td=item.endTime
           td
             a(href='/post?title=bicycleRental&id=' + item.ID)=item.name
 
