--- a/views/post.pug
+++ b/views/post.pug
@@ -37,7 +37,7 @@ block content
         for a in posts
           iframe#gmap_canvas(width='1000' height='500' src='https://map.kakao.com/?q='+a.address frameborder='0' scrolling='no' marginheight='0' marginwidth='0')
       style.
-       .mapouter{position:relative;text-align:right;height:500px;width:100%;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:100%;}                                                                                                                                  
+       .mapouter{position:relative;height:500px;width:100%;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:100%;}                                                                                                                                  
   .jumbotron
     h1.display-6 User Reviews
     table
