--- a/views/wheelchaircharger.pug
+++ b/views/wheelchaircharger.pug
@@ -5,7 +5,6 @@ block content
   table
     thead
       th address
-      th phoneNumber
       th starttime
       th endtime
       th location
@@ -14,9 +13,8 @@ block content
       for item in results
         tr
           td=item.address
-          td=item.phonenumber
-          td=item.starttime
-          td=item.endtime
+          td=item.startTime
+          td=item.endTime
           td=item.location
           td
             a(href='/post?title=wheelchairCharger&id=' + item.ID)=item.name
